# StereoVisualSLAM

./: .gitignore  CMakeLists.txt  README.md
config/: default.yaml
include/: algorithm.h  backend.h  camera.h  commonInclude.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2oTypes.h  map.h  mapPoint.h  slam.h  viewer.h
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mapPoint.cpp  slam.cpp  viewer.cpp
